deploy: 803039bb8d2d32b3920bcf27f6169da35185ade5

--- a/genindex.html
+++ b/genindex.html
@@ -6,6 +6,7 @@
   <title>Index &mdash; convexgating 0.1.0 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
+      <link rel="stylesheet" href="_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="_static/custom_cookietemple.css" type="text/css" />
       <link rel="stylesheet" href="_static/dark_mode_css/general.css" type="text/css" />
       <link rel="stylesheet" href="_static/dark_mode_css/dark.css" type="text/css" />
@@ -83,8 +84,56 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#C"><strong>C</strong></a>
+ | <a href="#M"><strong>M</strong></a>
  
 </div>
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    convexgating
+
+      <ul>
+        <li><a href="api.html#module-convexgating">module</a>
+</li>
+      </ul></li>
+      <li>
+    convexgating.__main__
+
+      <ul>
+        <li><a href="reference.html#module-convexgating.__main__">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    convexgating.gating_strategy
+
+      <ul>
+        <li><a href="api.html#module-convexgating.gating_strategy">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    module
+
+      <ul>
+        <li><a href="api.html#module-convexgating">convexgating</a>
+</li>
+        <li><a href="reference.html#module-convexgating.__main__">convexgating.__main__</a>
+</li>
+        <li><a href="api.html#module-convexgating.gating_strategy">convexgating.gating_strategy</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 
 
            </div>
