--- a/genindex.html
+++ b/genindex.html
@@ -85,19 +85,13 @@
 
 <div class="genindex-jumpbox">
  <a href="#C"><strong>C</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#M"><strong>M</strong></a>
  
 </div>
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    convexgating
-
-      <ul>
-        <li><a href="api.html#module-convexgating">module</a>
-</li>
-      </ul></li>
       <li>
     convexgating.__main__
 
@@ -106,14 +100,13 @@
 </li>
       </ul></li>
   </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    convexgating.gating_strategy
+</tr></table>
 
-      <ul>
-        <li><a href="api.html#module-convexgating.gating_strategy">module</a>
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#convexgating.gating_strategy">gating_strategy (class in convexgating)</a>
 </li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -124,11 +117,7 @@
     module
 
       <ul>
-        <li><a href="api.html#module-convexgating">convexgating</a>
-</li>
         <li><a href="reference.html#module-convexgating.__main__">convexgating.__main__</a>
-</li>
-        <li><a href="api.html#module-convexgating.gating_strategy">convexgating.gating_strategy</a>
 </li>
       </ul></li>
   </ul></td>
