deploy: 5afb8eb3fec1bbd1de8e673f2996445135f8cafa

--- a/genindex.html
+++ b/genindex.html
@@ -94,6 +94,10 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#convexgating.tools.CONVEX_GATING">CONVEX_GATING (class in convexgating.tools)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     convexgating.__main__
 
