--- a/genindex.html
+++ b/genindex.html
@@ -111,7 +111,7 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#convexgating.gating_strategy">gating_strategy (class in convexgating)</a>
+      <li><a href="api.html#convexgating.tools.gating_strategy">gating_strategy (class in convexgating.tools)</a>
 </li>
   </ul></td>
 </tr></table>
